# kennethreitz.org

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  DOCKER.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  engine.py  engine_new.py  engine_responder.py  fly.toml  nginx.conf  package-lock.json  package.json  prebuild_cache.py  pyproject.toml  requirements.in  requirements.txt  run.sh  saved-customizations.css  start.sh  static.py  svg_icon_generator.py  tailwind.config.js  tuftedoc.py
.claude/agents/: essay-optimizer.md  index-updater.md  kr-essay-writer.md  lumina-writer.md  markdown-migration-fixer.md  sidenote-specialist.md  thanks-sarah.md
data/: colophon.md  constellation.md  contact.md  family.md  great-books.md  great-music.md  index.md  knowledge-graph.md  mental-health.md  music.md  plurality.md  sanskrit-musings  stardust-&-circuits  test-toc.md  test.md  timeline.md  tweet-digital-collective-unconscious.md  values.md  worldview.md  yoga-meditation.md
data/AI/: east-vs-west.md  (+2 more)
docs/: content-structure.md  customization.md  deployment.md  getting-started.md  index.md  sidenotes.md
notebooks/: pytheory.py
scripts/: check_links.py  convert_squarespace.py  prebuild_media_cache.py
static/: custom-tufte.css  custom.css  et-book.css  mobile-components.css  mobile-enhancements.css  mobile-optimizations.js  mobile-test.js  simple.css  tailwind-input.css  tufte-converter.js
templates/: archive.html  base.html  connections.html  directory.html  external_links.html  graph.html  homepage-revised.html  homepage.html  index.html  mindmap.html  outlines.html  photo-grid.html  photo.html  photo_browser.html  photo_grid.html  photos.html  post.html  quotes.html  search.html  sidenotes.html  sitemap.html  terms.html  themes.html  timeline.html
tests/: conftest.py  test_api.py  test_content.py  test_feeds.py  test_media_cache.py  test_pages.py  test_site_sweep.py
tuftecms/: __init__.py  app.py  config.py
(+1230 files in other folders)
