[project]
name = "kennethreitz-org"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic",
    "fastapi[standard]",
    "uvicorn",
    "mistune",
    "pyyaml",
    "pydantic",
    "fastapi",
    "pygments",
    "boto3",
    "pillow",
    "background",
    "markdown>=3.8",
    "flask>=3.1.1",
    "gunicorn>=22.0.0",
    "gevent>=24.2.0",
]
